metrics-microservice-app/k8s/fake_ingress.yaml
apiVersion: v1                              
kind: Service                                  
metadata:
  name: metrics-fake-ingress
  labels:
    app: metrics-fake-ingress
    service: metrics-fake-ingress
spec:                                             
  ports:                                           
  - name: http                           
    port: 8000                                  
    targetPort: 8080
  selector:
    app: metrics-fake-ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-fake-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metrics-fake-ingress
      version: v1
  template:
    metadata:
      labels:
        app: metrics-fake-ingress
        version: v1
    spec:
      containers:
      - image: gangmuk/metrics-fake-ingress:latest # todo change
        imagePullPolicy: Always
        name: metrics-fake-ingress
        ports:
        - containerPort: 8080
