metrics-microservice-app/k8s/gw_vs_dr.yaml
#########################################################################
###
# Gateway/VirtualService for HotelReservation frontend
###
#########################################################################
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: metrics-app-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
#########################################################################
###
# This config creates subsets based on clusters for the frontend,
# and does header-based route matching to the correct subset
# based on the x-slate-destination header
###
#########################################################################

# DestinationRule for frontend, subsetting by label.
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: metrics-handler-destination
  namespace: default
spec:
  host: metrics-fake-ingress-dr
  subsets:
  - name: west
    labels:
      region: us-west-1
  - name: east
    labels:
      region: us-east-1
---
# Subset routing: if x-slate-destination is east, route to us-east, if west, route to west, if not set, random.
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: metrics-app 
spec:
  hosts:
  - "*"
  gateways:
  - metrics-app-gateway
  http:
  - match:
    - headers:
        x-slate-destination:
          exact: east
    route:
    - destination:
        host: metrics-handler 
        subset: east
        port:
          number: 8000
  - match:
    - headers:
        x-slate-destination:
          exact: west
    route:
    - destination:
        host: metrics-fake-ingress
        subset: west
        port:
          number: 8000
  - route:
    - destination:
        host: metrics-fake-ingress
        port:
          number: 8000
---
#########################################################################
###
# PROXYCONFIG for setting environment variables on proxies in different
# nodes.
###
#########################################################################
apiVersion: networking.istio.io/v1beta1
kind: ProxyConfig
metadata:
  name: east-proxyconfig
  namespace: default
spec:
  selector:
    matchLabels:
      region: us-east-1
  environmentVariables:
    ISTIO_META_REGION: "us-east-1"
---
apiVersion: networking.istio.io/v1beta1
kind: ProxyConfig
metadata:
  name: west-proxyconfig
  namespace: default
spec:
  selector:
    matchLabels:
      region: us-west-1
  environmentVariables:
    ISTIO_META_REGION: "us-west-1"
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: shared-span-bootstrap-config
  namespace: default
data:
  custom_bootstrap.json: |
    "tracing": {
      "http": {
        "name": "envoy.tracers.zipkin",
        "typed_config": {
          "@type": "type.googleapis.com/envoy.config.trace.v3.ZipkinConfig",
          "collector_cluster": "zipkin",
          "collector_endpoint": "/api/v2/spans",
          "collector_endpoint_version": "HTTP_JSON",
          "trace_id_128bit": true,
          "shared_span_context": true
        }
      }
    }
